--- a/src/app/pages/user-page/user-page.component.html
+++ b/src/app/pages/user-page/user-page.component.html
@@ -1,2 +1,11 @@
 <p>user-page works!</p>
-<p>{{ display }}</p>
+<p>{{ display | lowercase }}</p>
+<p>{{ display | uppercase }}</p>
+<ul>
+  <li>Number with "decimal" {{ num | number : "3.2-2" }}</li>
+  <li>Date with "date" {{ birthday | date : "medium" }}</li>
+  <li>Currency with "currency" {{ cost | currency }}</li>
+</ul>
+
+<p>{{ name | star }}</p>
+Reverse Machine: {{ word | reverse }}
