--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,77 +1,9 @@
 <!-- код скопирован в буфет обмена -->
 
-<app-if />
-<app-for />
-<app-click />
-<app-input occupation="Angular Developer"></app-input>
-<app-input />
-<app-output (addItemEvent)="addItem($event)" />
-<p>🐢 all the way down {{ items.length }}</p>
-<app-ng-optimized-image />
-<a routerLink="/home">Home</a>
-<span> | </span>
-<a routerLink="/user">User</a>
-<router-outlet />
-<div>
-  <h1>How I feel about Angular</h1>
-  <article>
-    <p>
-      Angular is my favorite framework, and this is why. Angular has the coolest
-      deferrable view feature that makes defer loading content the easiest and
-      most ergonomic it could possibly be. The Angular community is also filled
-      with amazing contributors and experts that create excellent content. The
-      community is welcoming and friendly, and it really is the best community
-      out there.
-    </p>
-    <p>
-      I can't express enough how much I enjoy working with Angular. It offers
-      the best developer experience I've ever had. I love that the Angular team
-      puts their developers first and takes care to make us very happy. They
-      genuinely want Angular to be the best framework it can be, and they're
-      doing such an amazing job at it, too. This statement comes from my heart
-      and is not at all copied and pasted. In fact, I think I'll say these exact
-      same things again a few times.
-    </p>
-    <p>
-      Angular is my favorite framework, and this is why. Angular has the coolest
-      deferrable view feature that makes defer loading content the easiest and
-      most ergonomic it could possibly be. The Angular community is also filled
-      with amazing contributors and experts that create excellent content. The
-      community is welcoming and friendly, and it really is the best community
-      out there.
-    </p>
-    <p>
-      I can't express enough how much I enjoy working with Angular. It offers
-      the best developer experience I've ever had. I love that the Angular team
-      puts their developers first and takes care to make us very happy. They
-      genuinely want Angular to be the best framework it can be, and they're
-      doing such an amazing job at it, too. This statement comes from my heart
-      and is not at all copied and pasted. In fact, I think I'll say these exact
-      same things again a few times.
-    </p>
-    <p>
-      Angular is my favorite framework, and this is why. Angular has the coolest
-      deferrable view feature that makes defer loading content the easiest and
-      most ergonomic it could possibly be. The Angular community is also filled
-      with amazing contributors and experts that create excellent content. The
-      community is welcoming and friendly, and it really is the best community
-      out there.
-    </p>
-    <p>
-      I can't express enough how much I enjoy working with Angular. It offers
-      the best developer experience I've ever had. I love that the Angular team
-      puts their developers first and takes care to make us very happy. They
-      genuinely want Angular to be the best framework it can be, and they're
-      doing such an amazing job at it, too. This statement comes from my heart
-      and is not at all copied and pasted.
-    </p>
-  </article>
-
-  @defer (on viewport) {
-  <app-defer />
-  } @placeholder {
-  <p>Future comments</p>
-  } @loading (minimum 2s) {
-  <p>Loading comments...</p>
+<div class="link-block">
+  @for (item of links; track $index) {
+  <a [routerLink]="item.link" class="link">{{ item.name }}</a>
   }
 </div>
+
+<router-outlet />
