--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,16 @@
-a {
+:host {
+  display: grid;
+  grid-gap: 30px;
+  padding: 30px;
+}
+
+.link-block {
+  display: flex;
+  gap: 30px;
+  flex-wrap: wrap;
+}
+.link {
   color: #fff;
-  font-weight: bolder;
+  text-decoration: none;
+  font-size: 20px;
 }
